mobile header spacing hot fix

--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -6,7 +6,7 @@
   min-height: 83px;
 
   @media (max-width: 1400px) {
-    margin-top: 3vh;
+    top: 3vh;
     position: fixed;
     width: 100%;
     box-sizing: border-box;
@@ -14,6 +14,6 @@
   }
 
   @media (max-width: 700px) {
-    margin-top: 1vh;
+   top: 1vh;
   }
 }
